--- a/style.css
+++ b/style.css
@@ -6,3 +6,11 @@
     text-align: left;       /* aligns Arabic properly */
     font-family: "Amiri", serif; /* optional: beautiful Arabic font */
 }
+
+.fattext {
+
+font-weight: 700;     
+
+
+
+}
